--- a/rockpaperscissors.css
+++ b/rockpaperscissors.css
@@ -1,4 +1,3 @@
-*@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,600&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -6,94 +5,138 @@
 }
 
 
-html, body {
-  font-family: 'Josefin Sans', sans-serif;
+body{
+  background-image: linear-gradient(#536976, #292E49);
+  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
+/* NAVBAR */
 
-header{
-  text-align: center;
-  background: #1E1B18;
-  padding: 20px;
-  color: white;
+.navbar{
+  width: 100%;
+  height: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.container{
-  text-align: center;
+.navbar a{
+  text-decoration: none;
+  color: black;
+  margin-right: 50px;
+}
+
+.navbar i{
   font-size: 40px;
-  font-weight: bold;
-
-
-}
-
-.player{
-  display: inline-block;
-  padding-left: 50px;
-
-
-
-
-}
-
-.wintieswin{
-  display: inline-block;
-  margin-top: 50px;
-  margin-bottom: 40px;
-  padding: 0px 80px;
-
-}
-
-#ties{
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-}
-
-
-
-.wintieswin1{
-  display: inline-block;
-  padding: 0 93px;
-  border: 1px black solid;
-}
-
-#tie{
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-}
-
-
-.choices{
-  margin: 50px 0;
-  text-align: center;
-
-}
-
-
-.choice{
-  text-align: center;
-  display: inline-block;
-  border: 2px solid black;
-  border-radius: 50%;
-  padding: 25px 25px;
-  margin: 10px 10px;
-
-}
-
-.choices :hover{
   cursor: pointer;
-  transition: all 0.3s ease;
-  background: grey;
+  color:white;
+}
 
+/* MAIN CONTAINER */
+
+.main-container{
+  display: flex;
+  justify-content: space-around;
+}
+
+/* USER SIDE */
+
+.user-side{
+  padding-top: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-side .icon i{
+  font-size: 80px;
+  padding-bottom: 50px;
+}
+
+.user-side .score{
+  font-size: 30px;
+  padding: 10px 40px;
+  border: 1px solid white;
+  color:white;
+}
+
+
+
+
+/* COMPUTER SIDE */
+
+.computer-side{
+  padding-top: 75px;
+}
+
+.computer-side .icon i{
+  font-size: 80px;
+  padding-bottom: 50px;
+}
+
+.computer-side .score{
+  font-size: 30px;
+  padding: 10px 40px;
+  border: 1px solid white;
+  color:white;
+}
+
+
+
+
+.game{
+  display: flex;
+}
+
+.game i{
+  font-size: 100px;
+  margin: 20px;
+  color: #F0FFFF;
+  cursor: pointer;
+}
+
+.game :nth-child(1){
+  padding-top: 250px;
+}
+
+.game :nth-child(2){
+  padding-top: 100px;
+}
+
+.game :nth-child(3){
+  padding-top: 250px;
+}
+
+.winner{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:white;
+  margin-top: 50px;
+}
+
+.footbar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  margin-top: 150px;
+}
+
+.footbar h2{
+  margin-bottom: 20px;
+  color:white;
 }
 
 
 #reset_button{
-  padding: 20px 20px;
-  border-radius: 5%;
-}
-
-#reset_button:hover{
+  padding: 20px;
+  border: 1px solid white;
   cursor: pointer;
-  transition: all 0.3s ease;
-
+  color:white;
 }
+
+
+
